--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,18 @@
         android:theme="@style/Theme.MyStore_Admin"
         tools:targetApi="31">
 
-        <activity android:name=".activity.AdminActivity" />
-
-        <activity android:name=".activity.SplashActivity"
+        <activity android:name=".activity.AdminActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".activity.SplashActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".MainActivity"
