--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    dependencies {
-        classpath 'com.google.gms:google-services:4.3.10'
-    }
 
     repositories {
         google()
+        maven { url 'https://jitpack.io' }
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
+
+
+
     }
 }
-
-
 
 
 plugins {
@@ -18,6 +19,10 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
+
+
+
+
 
 
 
